<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">G One Chat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add_status">New</string>
    <string name="action_edit">Edit</string>
     <string name="pref_file_name">mainClassFile.xml</string>
      <string name="action_search">Search</string>

    <!-- Titles -->
    <string name="title_register">Register</string>
    <string name="title_verify">Verify</string>
    <string name="title_new_group">New Group</string>
    <string name="title_add_detail">My Profile</string>
    <string name="internet_lost">No Internet Connections</string>
    <string name="title_activity_timeline_activity">Timeline</string>

    <!-- default values -->
    <string name="contry_code">+91</string>

    <!-- Hints -->
    <string name="hint_no">Enter your number</string>
    <string name="hint_email">Enter your Email</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="hint_enter_display_name">Display Name</string>
    <string name="hint_new_status">Status</string>

    <!-- other -->
    <string name="title_activity_recent_chant_list">Chat List</string>
    <string name="text_save">Save</string>
    <string name="text_timeline_message_send">Post Sucessful.</string>

    <!-- Error Messages -->
    <string name="error_no_internet_connection">No Internet Connection</string>

    <!-- chat menu -->
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_video">Video</string>
    <string name="text_location">Location</string>
    <string name="text_file">Stickers</string>
    <string name="text_contact">Contact</string>
    <string name="text_next">Next</string>
    <string name="text_done">Done</string>

    <!-- options -->
    <string name="text_setting">Settings</string>
    <string name="text_status">Status</string>
    <string name="text_new_group">New Group</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_contry_code">Country Codes</string>

    <!-- Setting -->
    <string name="text_delete_accoutn">Delete account</string>
    <string name="text_invite_friend">Invite friend</string>
    <string name="text_notification">Notification</string>
    <string name="text_chanege_number">Change number</string>
    <string name="text_help">About us</string>
    <string name="text_timeline">Timeline</string>
    <string name="share_text">Check out Gonechat Messenger for your smartphone. Download it today from either iTunes or Google Play</string>
    <string name="title_activity_status">Back</string>

    <!-- status -->
    <string name="current_status">Your status</string>
    <string name="status_at_work">at Work</string>
    <string name="status_list">Status</string>
    <string name="title_activity_add_status">Back</string>
    <string name="title_activity_create_new_group_activity">New Group</string>
    <string name="help_text_group">Please provide group subject and optional group icon</string>
    <string name="title_activity_select_group_user_list">Select Group User </string>
    <string name="hint_serch">search</string>
    <string name="error_text_invalid_group_name">Group Name length between 1 to 25.</string>
    <string name="error_zero_user_selected">Must Required Select atleast one user.</string>
    <string name="no_internet_connections">No Internet Connections</string>

    <!--  -->
    <string name="error_message_no_email">Enter Email</string>
    <string name="error_message_no_no">Enter Your No</string>
    <string name="text_loading_contacts">Loading Contacts..</string>
    <string name="select_picture">Select Picture</string>
    <string name="title_activity_user_detail">Details</string>
    <string name="text_no_photo">No Photo</string>
    <string name="title_activity_group_detail">Group Details</string>
    <string name="title_activity_friend_timeline">Timeline</string>
    <string name="text_group_members">GROUP MEMBERS</string>
    <string name="text_delete_exit_group">Delete and Exit Group</string>
    <string name="text_admin">Admin</string>
    <string name="text_date_group_created">Group Created : </string>
    <string name="text_demo_date">2014-06/18 12:15</string>


    <string name="title_activity_full_screen_image">Image</string>
    <string name="error_no_location_found">Location not found</string>
    <string name="text_add_group_members">Add Group Member</string>
    <string name="text_mesage_body">Hey I am Using HeyChat.</string>

</resources>