<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SettingActivity" >

    <TextView
        android:id="@+id/tv_delete_account_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/text_delete_accoutn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray_a"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_invite_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/text_invite_friend"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray_a" />

    <TextView
        android:id="@+id/tv_notification_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/text_notification"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray_a"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_change_number_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/text_chanege_number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray_a"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_help_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/text_help"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray_a"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_timeline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/text_timeline"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray_a"
        android:visibility="visible" />

</LinearLayout>