<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/title_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bar_bg_country_code"
                android:gravity="center"
                android:text="@string/contry_code"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/et_no_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/edit_bar_bg_register_small"
                android:gravity="center_vertical"
                android:hint="@string/hint_no"
                android:inputType="number"
                android:paddingLeft="3dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" >
            </EditText>
        </LinearLayout>

        <EditText
            android:id="@+id/et_email_register"
            style="@style/editext_register_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" >
        </EditText>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:text="@string/title_register"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>