<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/iv_profile_option_menu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/temp_picture" />

    <TextView
        android:id="@+id/tv_user_name_option_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/button_edit"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/light_green" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_setting_option_menu"
            style="@style/tv_chat_menu_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableTop="@drawable/button_settigns"
            android:text="@string/text_setting" />

        <TextView
            android:id="@+id/tv_status_option_menu"
            style="@style/tv_chat_menu_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableTop="@drawable/button_status"
            android:text="@string/text_status" />

        <TextView
            android:id="@+id/tv_new_group_option_menu"
            style="@style/tv_chat_menu_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/button_new_group"
            android:text="@string/text_new_group" />
    </LinearLayout>

</LinearLayout>